css/landing.css
/* ... */
@media screen and (max-width: 815px) {
  .grouping-images-and-title {
    gap: 8px;
  }

  #link-two-summon-line {
    width: 0px;
    opacity: 0;
  }

  .summon-me-line {
    grid-column: 1 / span 2;
  }

  .scroll-for-works-line {
    grid-column: 4 / span 5;
  }

  .landing-page-lines {
    opacity: 0;
  }

  #location-text,
  #specialty-text {
    grid-column: 1 / span 3;
  }

  #right-side-section {
    grid-column: 3 / span 5;
  }
  .reveal-image-link,
  .selection-arrow {
    opacity: 1;
  }

  .selection-arrow {
    width: 15px;
  }
}

/* Mobile Sizing */
/* intro section */
@media screen and (max-width: 815px) {
  #bottom-credits-what-i-do-piece {
    gap: 3px;
  }

  .scroll-for-works-line {
    grid-column: 3;
  }

  #introduction-section {
    gap: 32px;
    padding: 1.5rem 3% 1.5rem 3%;
    display: flex;
    flex-direction: column;
  }

  #kia-ora-intro-block-text {
    grid-column: 1;
    grid-template-rows: 3rem 3rem;
  }

  #heading-intro-first-block {
    grid-column: 1 / span 3;
    grid-template-columns: 62.5vw 3vw;
    grid-template-rows: 0.1fr 1fr;
  }

  #header-star {
    opacity: 0;
    width: 2rem;
    grid-column: 2;
    grid-row: 1;
    align-self: end;
    padding-bottom: 1.25rem;
  }

  .landing-page-lines {
    opacity: 0;
  }

  #kia-ora-intro-block-text {
    gap: 0px;
    font-size: 2.5rem;
  }

  #left-side-section {
    padding: 0;
    grid-column: 1 / span 2;
    opacity: 1;
    gap: 32px;
  }

  #bottom-credits-what-i-do-piece {
    grid-column: 1 / span 3;
    grid-template-columns: 1fr;
    grid-row: 4;
    grid-template-rows: 1.5rem 1.5rem 1.5rem;
    justify-content: space-between;
  }

  #bottom-credits-what-i-do-piece p {
    font-size: 1rem;
  }

  #specialty-text,
  #location-text,
  #linkedin-text,
  #linkedin-text,
  #instagram-text,
  #instagram-text-photography {
    display: flex;
    grid-column: 1 / span 5;
  }

  .scroll-for-works-line {
    opacity: 0;
  }

  .summon-me-line {
    grid-row: 3;
    grid-column: 1 / span 5;
    font-size: 0.9rem;
  }

  #second-prompt-line {
    opacity: 0;
  }

  /* works section */

  #works-section {
    height: min-content;
    grid-template-columns: 1fr 1fr;
  }

  #works-left-side-desktop {
    opacity: 0;
    height: 0;
  }

  #works-left-side-mobile {
    opacity: 1;
    grid-column: 1 / span 5;
    grid-template-rows: 0rem 0rem auto auto auto;
    gap: 12px;
  }

  #title-selected-works {
    grid-column: 1;
    border-bottom: 1px #000 solid;
    margin-right: 0;
    margin-bottom: 24px;
    padding-bottom: 12px;
  }

  /*
#selected-works-container {
  gap: 12px;
}
  */

  #selected-works-container-mobile {
    height: min-content;
    opacity: 1;
    gap: 12px;
    pointer-events: all;
  }

  #selected-works-container-desktop {
    height: 0px;
    display: block;
    pointer-events: none;
  }

  .project-describer-section {
    display: flex;
    flex-direction: column;
    gap: 12px;
    padding-bottom: 96px;
  }

  .works-div-cat-flex {
    display: flex;
    flex-direction: column;
    gap: 6px;
    padding-bottom: 0px;
  }

  .project-overview-image {
    height: 60vw;
    border: 1px #000 solid;
  }

  .project-describer-section,
  .project-overview-image {
    opacity: 1;
  }

  #works-right-piece {
    display: flex;
    height: 0px;
  }

  #extras-section {
    padding-top: 0rem;
  }

  #services-landing {
    margin-top: 0;
    order: 4;
    font-size: 0.9rem;
    color: #111;
    align-self: start;
    line-height: 100%;
  }

  #services-text {
    padding-bottom: 4px;
  }

  #photo-section {
    order: 3;
    height: 0px;
    opacity: 0;
  }

  #box-image-showcase {
    height: 100%;
  }

  /*
#box-image-showcase::after {
  opacity: 1;
}
/*







/* Extras Section*/

  #title-extras {
    opacity: 0;
    font-family: "hass-roman";
    font-size: 0.9rem;
    font-weight: 100;
    color: #000;
    grid-row: 3;
    border-bottom: 1px #000 solid;
    margin-right: 0vw;
    margin-bottom: 0px;
    height: min-content;
    padding-bottom: 12px;
    letter-spacing: 0.02rem;
  }

  #extras-section {
    display: flex;
    flex-direction: column;
    height: min-content;
    gap: 48px;
    margin-bottom: 0px;
  }

  #education-and-skills {
    grid-template-columns: 1fr auto;
    grid-template-rows: 1fr;
  }

  #edutcation-full-container {
    grid-column: 1fr 1fr;
    grid-row: 1fr;
  }

  #explainer-resume-text {
    grid-template-rows: 1fr;
    grid-column: 1 / span 2;
    grid-row: 2;
  }

  #explainer-resume-p {
    margin: 0;
    padding-top: 0;
  }

  #view-resume-container {
    grid-template-rows: 1rem;
    grid-column: 1 / span 2;
    grid-row: 3;
    justify-self: start;
    padding-bottom: 48px;
  }

  #view-resume-line {
    writing-mode: horizontal-tb;
    font-size: 2.2rem;
    font-family: "edit-old-light";
    font-weight: 600;
    color: #333;
  }

  #tools-break-up {
    display: flex;
    flex-direction: column;
    gap: 24px;
  }

  .tools-big-text {
    font-size: 2.2rem;
  }
}

@media screen and (max-width: 600px) {
  #heading-intro-first-block {
    grid-column: 1 / span 2;
    grid-template-columns: 62.5vw auto;
  }

  #header-star {
    width: 0.1px;
  }

  #personal-overview {
    grid-column: 1 / span 2;
  }
}

/*

#project-preview {
  grid-column: 4 /span 5;
  grid-row: 2;
}

#kupu-image-overview-piece { background-image: url('../images/kupu-rangi-images/kupu-header.png'); }
#unheard-image-overview-piece { background-image: url('../images/kupu-rangi-images/kupu-header.png'); }
#optics-image-overview-piece { background-image: url('../images/kupu-rangi-images/kupu-header.png'); }
#vis-image-overview-piece { background-image: url('../images/kupu-rangi-images/kupu-header.png'); }

#project-photo-div {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

*/

